# databricks

./: .gitignore  .rat-excludes  generated_task_specs.json
.github/workflows/: benchmarks.yml  csharp.yml  dev.yaml  e2e-tests.yml  go_release.yaml  go_test.yaml  pr-validation.yml  rust-e2e.yml  rust_coverage_report.yaml  rust_release.yaml  rust_test.yaml  trigger-integration-tests.yml
csharp/: CODING_GUIDELINES.md
csharp/doc/: sea-metadata-design.md  telemetry-design.md  telemetry-sprint-plan-2026-03-05.md  telemetry-sprint-plan.md
csharp/src/: ColumnMetadataHelper.cs  DatabricksConnection.cs  DatabricksParameters.cs  DatabricksStatement.cs  FeatureFlagCache.cs  FlatColumnsResultBuilder.cs  MetadataUtilities.cs  PropertyHelper.cs  RetryHttpHandler.cs
csharp/src/Http/: HttpClientFactory.cs  HttpHandlerFactory.cs
csharp/src/Reader/: DatabricksCompositeReader.cs  DatabricksOperationStatusPoller.cs  (+1 more)
csharp/test/: ColumnMetadataHelperTests.cs
docs/designs/: fix-telemetry-gaps-design.md
go/: bulk_ingest.go  bulk_volume_copy.go  connection.go  database.go  driver.go  ipc_reader_adapter.go  statement.go
rust/: CLAUDE.md  Cargo.toml  about.toml
rust/ci/proxy/: htpasswd  squid-auth.conf
rust/docs/designs/: PECOBLR-2091-retry-logic-design.md  oauth-sprint-plan.md  oauth-u2m-m2m-design.md  odbc-batch-optimization.md  result-metadata-propagation.md
rust/examples/: metadata_propagation_test.rs
rust/include/: databricks_metadata_ffi.h
rust/patches/adbc_ffi/: .cargo_vcs_info.json  Cargo.toml
rust/patches/adbc_ffi/src/: types.rs
rust/spec/: cloudfetch-pipeline-redesign.md  odbc-metadata-ffi-design.md  proxy-support-design.md  sprint-plan-cloudfetch-redesign.md  tls-config-design.md
rust/src/: connection.rs  database.rs  error.rs  lib.rs  statement.rs
rust/src/auth/: config.rs  mod.rs
rust/src/auth/oauth/: cache.rs  callback.rs  m2m.rs  mod.rs  oidc.rs  token.rs  token_store.rs  u2m.rs
rust/src/client/: http.rs  mod.rs  retry.rs  sea.rs
rust/src/ffi/: error.rs  metadata.rs  mod.rs
rust/src/metadata/: parse.rs  sql.rs  type_mapping.rs
rust/src/reader/: mod.rs  test_utils.rs
rust/src/reader/cloudfetch/: chunk_downloader.rs  link_fetcher.rs  mod.rs  pipeline_types.rs  scheduler.rs  streaming_provider.rs  workers.rs
rust/src/types/: cloudfetch.rs  mod.rs  sea.rs
rust/tests/: cloudfetch_pipeline.rs  e2e.rs  integration.rs  metadata_e2e.rs  oauth_e2e.rs  oauth_u2m_integration.rs  proxy_e2e.rs  tls_e2e.rs
(+76 files in other folders)
