# Copyright (c) 2025 ADBC Drivers Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "databricks-adbc"
version = "0.1.0"
edition = "2021"
authors = ["Databricks"]
license = "Apache-2.0"
description = "Databricks ADBC Driver for Rust"
repository = "https://github.com/adbc-drivers/databricks"
keywords = ["databricks", "adbc", "arrow", "database", "sql"]
categories = ["database"]

[dependencies]
adbc_core = "0.22"
adbc_ffi = { version = "0.22", optional = true }
driverbase = { git = "https://github.com/adbc-drivers/driverbase-rs.git", rev = "a824debf9cbc2236bc12a09c178576b8254c04c4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Use arrow versions that match driverbase (which uses v57)
# The adbc_core crate accepts >=53.1.0, <58
arrow-array = "57"
arrow-buffer = "57"
arrow-schema = "57"
arrow-select = "57"
arrow-ipc = "57"

# HTTP client and async runtime
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# LZ4 decompression for CloudFetch
lz4_flex = "0.11"

# Concurrent data structures
dashmap = "5"

# Async utilities
futures = "0.3"
tokio-util = "0.7"
async-trait = "0.1"

# Error handling
thiserror = "2"

# Arrow C Data Interface for metadata FFI
arrow = { version = "57", optional = true, default-features = false, features = ["ffi"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
adbc_driver_manager = "0.22"

[features]
default = []
ffi = ["adbc_ffi"]
metadata-ffi = ["ffi", "dep:arrow"]

[lib]
name = "databricks_adbc"
crate-type = ["lib", "cdylib", "staticlib"]
